--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <tittle>我的首頁</tittle>
 </head>
-<body background="image/bg01" text="FFCCCC>
+<body background="image/bg01.jpg" text="FFCCCC>
 
 <a href="index.html">連到第二頁</a>
 <p>
