--- a/3rd.html
+++ b/3rd.html
@@ -2,7 +2,7 @@
 <head>
 <tittle>我的第三頁</tittle>
 </head>
-<body>
+<body background="image/bg03.jpg" text="FF9999">
 
 <a href="index.html">連到我的首頁</a>
 <p>
