--- a/2nd.html
+++ b/2nd.html
@@ -2,7 +2,7 @@
 <head>
 <tittle>我的第二頁</tittle>
 </head>
-<body>
+<body background="image/bg02.jpg" text="FF9999">
 <a href="index.html">連到我的首頁</a>
 <p>
 <a href="3rd.html">連到第三頁</a>
